Part 2/2.2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectxx-svc
spec:
  type: ClusterIP
  selector:
    app: projectxx
  ports:
    - name: projectxx
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: todo
      port: 2346
      protocol: TCP
      targetPort: 5000
